--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-git clone https://github.com/yu-sun228/x-clone.git
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Your Name</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Your Portfolio</h1>
+</body>
+</html>
