--- a/index.html
+++ b/index.html
@@ -30,3 +30,9 @@
   </div>
 </body>
 
+<nav class="slide-nav">
+  <a href="#slide-1">1</a>
+  <a href="#slide-2">2</a>
+  <a href="#slide-3">3</a>
+</nav>
+
