--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+
 <body>
-  <div class="layout">
+ <div class="layout">
 
     <!-- MAIN SCROLL PANEL -->
     <main class="scroll-panel">
