--- a/index.html
+++ b/index.html
@@ -1,44 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <title>Scroll Snap Test</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
-
 <body>
- <div class="layout">
 
-    <!-- MAIN SCROLL PANEL -->
-    <main class="scroll-panel">
-      <section class="slide" id="slide-1">
-        <h1>Title of the Project <span>2024</span></h1>
-        <p>Supplementary text...</p>
-      </section>
+<div class="scroll-panel">
+  <section class="slide one">Slide 1</section>
+  <section class="slide two">Slide 2</section>
+  <section class="slide three">Slide 3</section>
+</div>
 
-      <section class="slide" id="slide-2">
-        <h1>Slide 2</h1>
-        <p>More content here.</p>
-      </section>
-
-      <section class="slide" id="slide-3">
-        <h1>Slide 3</h1>
-        <p>More content here.</p>
-      </section>
-
-      <nav class="slide-nav">
-        <a href="#slide-1">1</a>
-        <a href="#slide-2">2</a>
-         <a href="#slide-3">3</a>
-      </nav>
-
-    </main>
-
-    <!-- FIXED SIDE PANEL -->
-    <aside class="side-panel">
-      <h2>YUSUN<br>JUNG</h2>
-      <p class="email">yusunjung@ufl.edu</p>
-      <a href="#">LinkedIn</a>
-      <a href="#">Resume</a>
-    </aside>
-
-  </div>
 </body>
+</html>
 
