--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <section class="slide three">Slide 3</section>
 </div>
 
+<div class="layout">
+  <main class="scroll-panel">
+    <!-- slides -->
+  </main>
+
+  <aside class="side-panel">
+    <!-- name / links -->
+  </aside>
+</div>
+
 </body>
 </html>
 
