--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             flex-direction: column;
             justify-content: center;
             padding: 0 80px; 
+            color: ffffff;
         }
 
         .project-header {
